Fix quotes not wrapping properly

--- a/styles/QuoteBox.module.css
+++ b/styles/QuoteBox.module.css
@@ -23,7 +23,6 @@
     position: relative;
     font-size: 2rem;
     white-space: pre-wrap;
-    word-break: break-word;
 }
 
 .quote strong {
